created Account sql scripts, implemented tab strip, renamed manage-grid, updated styling
